Opened 16 years ago
Closed 16 years ago
#3803 closed bug (fixed)
Random characters displayed in Terminal
Reported by: | haiqu | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
While doing a ./configure I noticed that every time I used the Enter (Carriage Return) key a random alphanumeric character would appear at the end of the line just exited. I have also notcied this occasionally when typing commands at the Terminal.
Change History (7)
comment:1 by , 16 years ago
comment:2 by , 16 years ago
Probably the change to CopyBits()/ scrolling which I added to app_server during BeGeistert. I've seen some other problems as well with this. I think the change is correct in principle (removing the successfully copied target region from the dirty region of the respective window), only there must be something wrong in the details, like it probably forgets to remove something from the copy region before doing the blit or something.
comment:3 by , 16 years ago
Component: | Applications/Terminal → Servers/app_server |
---|---|
Owner: | changed from | to
comment:4 by , 16 years ago
Milestone: | R1 → R1/alpha1 |
---|
comment:5 by , 16 years ago
IIRC this seems to only happen to the last char on a line, and only when you are near the bottom of the terminal where it needs to scroll up. And the char it gets replaced with it a copy of the same char that is under it, so it's almost as if it's scrolling up the wrong char.
comment:6 by , 16 years ago
I've been playing with this for a while:-
Here's the rule:
- When the cursor is anywhere on the last row of the Terminal and you scroll down one line, the character position one row directly above the cursor is not being invalidated to display the character that was previously under the cursor.
- If you move the cursor back up one row over that character position, THEN it invalidates and redraws the correct character.
(tested using vi)
I hope that helps solve it.
comment:7 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Should be fixed in hrev30840. Please reopen if you're still able to reproduce.
Ah yes, I started seeing this recently as well, and I think BGA mentioned it in IRC the other day.
It does seem to only be a painting issue, as you can drag the terminal window off the side of the screen and back and it clears up.
Guessing it's some app_server or interface kit change that has occurred recently, although I don't have much clue when. I believe I noticed it happening around a week ago.