Simplify dirty region handling when copying regions. Basically the full region is considered dirty and only what we are really able to copy (which excludes all possible dirty regions) is removed from that again. This is simpler and less error prone than to remove more than we may copy and then add the old dirty regions back. Fixes a few region copy related redraw issues most visible in case of scrolling like non-updated parts when scrolling in Tracker or Terminal as in bug #3803.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30840 a95241bf-73f2-0310-859d-f6bbb57e9c96